orange -> more orange

--- a/the.css
+++ b/the.css
@@ -1,5 +1,5 @@
 .red { background-color: #db2556 }
-.orange { background-color: #ea552d }
+.orange { background-color: orange }
 .yellow { background-color: #cfcf0c }
 .green { background-color: #7db31b }
 .blue { background-color: #096975 }
