--- a/the.css
+++ b/the.css
@@ -34,6 +34,14 @@ table {
 
 td {
 	transition: background-color .2s linear;
+	-webkit-user-select: none;
+	-khtml-user-drag: none;
+	-khtml-user-select: none;
+	-moz-user-select: none;
+	-moz-user-select: -moz-none;
+	-ms-user-select: none;
+	user-select: none;
+	cursor: pointer;
 }
 
 #bar {
